# fabm-spectral

./: README.md
data/: f90const.py
data/ASTM/: README.txt  parse.py
data/BirdRior1986/: parse.py  readme.txt  t2-1.htm  table1.txt
data/oasim/: README.txt  parse.py  parse_slingo.py
src/: CMakeLists.txt  astm_const.inc  atmosphere.F90  bird_const.inc  birdrior1986_const.inc  oasim_const.inc  ozone.F90  phyto_const.inc  relhum.F90  shared.F90  slingo.F90  slingo_const.inc  spectral.F90  spectral_model_library.F90  spectral_test.F90  underwater.F90  water_const.inc
testcases/: fabm-with-ersem-amm7-no_ady.yaml  fabm-with-ersem-amm7-no_bb.yaml  fabm-with-ersem-amm7.yaml  fabm-with-ersem.yaml  fabm.yaml
tests/: test.py
